# industrial-deep-diagnostic

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SKILL_EVALUATION_REPORT.md  SKILL_EXECUTION_ANALYSIS_REPORT.md  docker-compose.yml  nginx.conf  package-lock.json  package.json
.claude/skills/industrial-deep-diagnostic/scripts/: artifact-check.mjs  convert.mjs  deep_analyze.py  deep_visualize.py  file_inspect.py  generate_captions.mjs  inspect.mjs  physics_check.py  pyproject.toml  requirements.txt  setup.mjs  stats.mjs  stats_validate.mjs  template_preprocess.py  template_visualize.py  uv_env_setup.mjs  validate.mjs
app/backend/: package-lock.json  package.json
app/frontend/: index.html  package-lock.json  package.json  vite.config.js
commands/: cli.mjs  start-all.sh  start-backend.sh  start-frontend.sh
config/: default.yaml  loader.mjs
data/: cnc_spindle_data.csv  generate_heat_exchanger_data.py  generate_test_data.py  heat_exchanger_fouling.csv  pva_coating_line_data.csv
data/cement_ball_mill/: generate_data.py  ground_truth.md  lab_quality_export_20251001_20251229.csv  maintenance_event_log_2025Q4.csv  merged_dcs_lab_20251001_20251229.csv
data/eval_bopet_film_drift/: data.csv  generate.py  ground_truth.md
data/eval_cnc_spindle_wear/: data.csv  generate.py  ground_truth.md
evals/: evals.json  synthetic_known_data.csv
ppt_workspace/: BOPET_MD_Diagnosis_Report.pptx  PLAN.md  compile.cjs  fix_slides.cjs
skill-evals/: eval-review.html
webfrp/: expose.mjs
workspace/: maturity-assessment.html  pipeline-flowchart.html
(+394 files in other folders)
