[project]
name = "industrial-deep-diagnostic"
version = "6.1.0"
description = "Industrial process root cause diagnostic toolkit"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "seaborn>=0.12.0",
    "openpyxl>=3.1.0",
    "pyarrow>=12.0.0",
    "scipy>=1.10.0",
]

[tool.uv]
managed = true
